# deepseek-cli

./: LICENSE  README.md  deepapi.env.example.bat  pyproject.toml  requirements.txt  run_claude_deepseek.bat
deepapi/: README.md  bridge.py  config.py  deepseek_client.py  pow_solver.py  server.py
